<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C4C4C"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="15dp"
        android:backgroundTint="#151515"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_02_09_2021"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"/>

        <TextView
            android:id="@+id/tv_weather_abbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snow"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"/>

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_c"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"/>

        <TextView
            android:id="@+id/tv_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_7c"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="180dp"/>

        <TextView
            android:id="@+id/tv_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_20c"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="210dp"/>
    </androidx.cardview.widget.CardView>


</LinearLayout>