<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btn_getCityID"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/show_city_id" />

        <Button
            android:id="@+id/btn_getWeatherByCityID"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/weather_by_id" />

        <Button
            android:id="@+id/btn_getWeatherByCityName"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="88dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/weather_by_name" />


    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/city_id_city_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dataInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"/>

    <ListView
        android:id="@+id/lv_weathersReports"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"/>

</LinearLayout>